// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id                String    @id @default(uuid())
  email             String    @unique
  name              String?
  password          String
  created_at        DateTime  @default(now())
  updated_at        DateTime  @updatedAt
  sended_messages   Message[] @relation("sender")
  received_messages Message[] @relation("receiver")
}

model Message {
  id          String   @id @default(uuid())
  text        String
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
  sender      User     @relation("sender", fields: [sender_id], references: [id])
  sender_id   String
  receiver    User     @relation("receiver", fields: [receiver_id], references: [id])
  receiver_id String
}
